--- a/new-ticket.html
+++ b/new-ticket.html
@@ -6,83 +6,59 @@
   <title>New Ticket</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- 1) Define our handler up front -->
+  <!-- Handler for iframe load -->
   <script>
     window.justSubmitted = false;
-
     function onIframeLoad() {
-      if (!window.justSubmitted) return;   // ignore the iframe’s initial blank load
+      if (!window.justSubmitted) return;
       window.justSubmitted = false;
       alert("Ticket submitted!");
       window.location.href = "tickets.html";
     }
-
-    // Will attach this once DOM is ready
-    function setupIframeListener() {
-      const iframe = document.querySelector('iframe[name="hidden_iframe"]');
-      if (iframe) {
-        iframe.addEventListener('load', onIframeLoad);
-      }
-    }
-
-    // When the page loads, wire up the iframe listener
-    window.addEventListener('DOMContentLoaded', setupIframeListener);
+    document.addEventListener("DOMContentLoaded", () => {
+      const frame = document.querySelector('iframe[name="hidden_iframe"]');
+      frame.addEventListener("load", onIframeLoad);
+    });
   </script>
 </head>
-
 <body class="bg-gray-100 p-6 font-sans">
-
-  <!-- 2) Hidden iframe (no inline onload) -->
+  <!-- Hidden target for form POST -->
   <iframe name="hidden_iframe" style="display:none"></iframe>
 
-  <!-- 3) The form -->
   <div class="max-w-3xl mx-auto bg-white p-6 shadow rounded">
     <h1 class="text-2xl font-bold mb-6">New Ticket</h1>
     <form id="ticketForm"
-          action="https://script.google.com/macros/s/AKfycbxTBPMaymJLcInvqfgHNNl2ae2fhyTdLUOdnYM-0r8n5u5la8kQEuoz7Vd_advfpCKE/exec"
+          action="https://script.google.com/macros/s/AKfycbxS5MpcZ72QMuNHQ-BhwD9Z5GE4gNpHT8UYdntk-Sa_51rnp83o3U8tbEVRCnqIhi89/exec"
           method="post"
           target="hidden_iframe"
           class="space-y-4">
-
       <div class="grid grid-cols-2 gap-4">
-        <input class="border p-2 rounded" placeholder="Competition"    name="competition" required />
-        <input class="border p-2 rounded" placeholder="Season"         name="season"      required />
-        <input class="border p-2 rounded" placeholder="Event (e.g., Jan 23, 2025 – 18:30)" name="event" required />
-        <input class="border p-2 rounded" placeholder="Track"          name="track"       required />
-        <input class="border p-2 rounded" placeholder="Race"           name="race" />
-        <input class="border p-2 rounded" placeholder="Reporter"       name="reporter"    required />
-        <input class="border p-2 rounded" placeholder="Accused"        name="accused"     required />
-        <input class="border p-2 rounded" placeholder="Steward"        name="steward" />
-        <input class="border p-2 rounded" placeholder="Reason"         name="reason"      required />
-        <input class="border p-2 rounded" placeholder="Timestamp (e.g., 12:34)"   name="timestamp" />
+        <input name="competition" placeholder="Competition" class="border p-2 rounded" required>
+        <input name="season"      placeholder="Season"      class="border p-2 rounded" required>
+        <input name="event"       placeholder="Event (e.g. Jan 23, 2025 – 18:30)" class="border p-2 rounded" required>
+        <input name="track"       placeholder="Track"       class="border p-2 rounded" required>
+        <input name="race"        placeholder="Race"        class="border p-2 rounded">
+        <input name="reporter"    placeholder="Reporter"    class="border p-2 rounded" required>
+        <input name="accused"     placeholder="Accused"     class="border p-2 rounded" required>
+        <input name="steward"     placeholder="Steward"     class="border p-2 rounded">
+        <input name="reason"      placeholder="Reason"      class="border p-2 rounded" required>
+        <input name="timestamp"   placeholder="Timestamp (e.g. 12:34)" class="border p-2 rounded">
       </div>
-
-      <textarea class="w-full border p-2 rounded" rows="4"
-                placeholder="Content / Description"
-                name="content"></textarea>
-
-      <input class="w-full border p-2 rounded"
-             placeholder="Visual Proof URL (YouTube, etc.)"
-             name="proofUrl"/>
-
+      <textarea name="content" placeholder="Content / Description" rows="4" class="w-full border p-2 rounded"></textarea>
+      <input name="proofUrl" placeholder="Visual Proof URL (YouTube, etc.)" class="w-full border p-2 rounded">
       <div class="flex justify-end gap-4">
-        <a href="tickets.html" class="px-4 py-2 border rounded hover:bg-gray-100">
-          CANCEL
-        </a>
-        <button type="submit"
-                class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
+        <a href="tickets.html" class="px-4 py-2 border rounded hover:bg-gray-100">CANCEL</a>
+        <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
           SAVE
         </button>
       </div>
     </form>
   </div>
 
-  <!-- 4) Mark justSubmitted when form fires -->
   <script>
+    // Flag that tells iframeLoaded to run
     document.getElementById("ticketForm")
-      .addEventListener("submit", () => {
-        window.justSubmitted = true;
-      });
+      .addEventListener("submit", () => { window.justSubmitted = true; });
   </script>
 </body>
 </html>
